css alignment fix

--- a/views/static/css/main.css
+++ b/views/static/css/main.css
@@ -1,7 +1,7 @@
 /* Toggle Styles */
 
 #wrapper {
-    padding-left: 150px;
+    padding-left: 250px;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -9,13 +9,13 @@
 }
 
 #wrapper.toggled {
-    padding-left: 150px;
+    padding-left: 250px;
 }
 
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
-    left: 150px;
+    left: 250px;
     width: 0;
     height: 100%;
     margin-left: -250px;
@@ -46,7 +46,7 @@
 
 .sidebar-nav {
     position: absolute;
-    top: 0;
+    top: 25;
     width: 150px;
     margin: 0;
     padding: 0;
